--- a/SWKT-1153/config.json
+++ b/SWKT-1153/config.json
@@ -1,43 +1,40 @@
 {
-	"api": [
-		"localhost"
-	],
-	"panels": [
-		{
-			"hostname": "SWKT-1153-CP1",
-			"uipath": "/blueberry",
-			"preset": "Display",
-            		"features": [
-            		]
-		}
-	],
-	"presets": [
-		{
-			"name": "Display",
-			"icon": "tv",
-			"displays": [
-				"D1"
-			],
-			"shareableDisplays": [
-			],
-			"audioDevices": [
-				"D1"
-			],
-			"inputs": [
-                		"HDMI1"
-			],
-			"independentAudioDevices": [
-				"D1"
-			]
-		}
-	],
-	
+    "api": [
+        "localhost"
+    ],
     "inputConfiguration": [
         {
             "name": "HDMI1",
             "icon": "settings_input_hdmi"
         }
     ],
-    "roomWideAudio": [
+    "presets": [
+		{
+			"name": "Flatpanel",
+			"displays": [
+				"D1"
+			],
+			"icon": "tv",
+			"audioDevices": [
+				"D1"
+			],
+			"inputs": [
+                "HDMI1"
+			],
+			"independentAudioDevices": [
+			]
+		}
+    ],
+	"panels": [
+		{
+			"hostname": "SWKT-1153-CP1",
+			"uipath": "/blueberry",
+			"preset": "Flatpanel",
+			"features": [
+			]
+		}
+	],
+    "audioConfiguration": [
     ]
 }
+
