adding overflow back into 1006

--- a/ITB-1006/config.json
+++ b/ITB-1006/config.json
@@ -18,7 +18,7 @@
     ],
     "presets": [
 		{
-			"name": "Flatpanel",
+			"name": "Projector",
 			"displays": [
 				"D1"
 			],
@@ -28,7 +28,8 @@
 			],
 			"inputs": [
                 "HDMI1",
-                "VIA1"
+                "VIA1",
+                "Overflow"
 			],
 			"independentAudioDevices": [
 			]
