--- a/HCEB-428/config.json
+++ b/HCEB-428/config.json
@@ -4,7 +4,7 @@
 	],
 	"panels": [
 		{
-			"hostname": "HECB-428-CP1",
+			"hostname": "HCEB-428-CP1",
 			"uipath": "/blueberry",
 			"preset":"Flatpanel",
 			"features": [
