adding ITB-1108 mics

--- a/ITB-1108/config.json
+++ b/ITB-1108/config.json
@@ -24,7 +24,10 @@
 			"inputs": [
                 "HDMI1",
                 "VIA1"
-			]
+			],
+            "independentAudioDevices": [
+                "MIC1"
+            ]
 		},
 		{
 			"name": "Station 2",
