--- a/ITB-1010/config.json
+++ b/ITB-1010/config.json
@@ -61,7 +61,11 @@
                 "HDMI2",
                 "VIA1",
                 "VIA2"
-			]
+			],
+            "independentAudioDevices": [
+                "MIC1",
+                "MIC2"
+            ]
 		}
 	],
 	"panels": [
