adding computer to HCEB-325

--- a/HCEB-325/config.json
+++ b/HCEB-325/config.json
@@ -22,7 +22,8 @@
 				"D1"
 			],
 			"inputs": [
-                "HDMI1"
+                "HDMI1",
+                "PC1"
 			],
 			"independentAudios": [
 			]
@@ -32,6 +33,10 @@
       {
           "name": "HDMI1",
           "icon": "settings_input_hdmi"
+      },
+      {
+          "name": "PC1",
+          "icon": "computer"
       }
   ],
   "audioConfiguration": [
