--- a/HCEB-429/config.json
+++ b/HCEB-429/config.json
@@ -22,7 +22,8 @@
 				"D1"
 			],
 			"inputs": [
-                "HDMI1"
+                "HDMI1",
+                "VIA1"
 			],
 			"independentAudios": [
 			]
@@ -32,7 +33,12 @@
       {
           "name": "HDMI1",
           "icon": "settings_input_hdmi"
+      },
+      {
+            "name": "VIA1",
+            "icon": "settings_input_antenna"
       }
+
   ],
   "audioConfiguration": [
   ]
