add via to 118, add cp2 to 107

--- a/HCEB-107/config.json
+++ b/HCEB-107/config.json
@@ -9,6 +9,13 @@
 			"preset":"Flatpanel",
 			"features": [
 			]
+		},
+		{
+			"hostname": "HCEB-107-CP2",
+			"uipath": "/blueberry",
+			"preset":"Flatpanel",
+			"features": [
+			]
 		}
 	],
 	"presets": [
