--- a/HCEB-118/config.json
+++ b/HCEB-118/config.json
@@ -22,8 +22,9 @@
 				"D1"
 			],
 			"inputs": [
+                "PC1",
                 "HDMI1",
-                "PC1"
+                "VIA1"
 			],
 			"independentAudios": [
 			]
@@ -37,6 +38,10 @@
       {
           "name": "PC1",
           "icon": "computer"
+      },
+      {
+          "name": "VIA1",
+          "icon": "settings_input_antenna"
       }
   ],
   "audioConfiguration": [
