adding second input to HCEB-107

--- a/HCEB-107/config.json
+++ b/HCEB-107/config.json
@@ -20,7 +20,22 @@
 	],
 	"presets": [
 		{
-			"name": "Flatpanel",
+			"name": "North Display",
+			"displays": [
+				"D2"
+			],
+			"icon": "tv",
+			"audioDevices": [
+				"D2"
+			],
+			"inputs": [
+                "HDMI2"
+			],
+			"independentAudios": [
+			]
+		},
+		{
+			"name": "South Display",
 			"displays": [
 				"D1"
 			],
@@ -29,7 +44,7 @@
 				"D1"
 			],
 			"inputs": [
-                "HDMI1"
+                "PC1"
 			],
 			"independentAudios": [
 			]
@@ -38,6 +53,10 @@
   "inputConfiguration": [
       {
           "name": "HDMI1",
+          "icon": "settings_input_hdmi"
+      },
+      {
+          "name": "PC1",
           "icon": "settings_input_hdmi"
       }
   ],
