--- a/HCEB-107/config.json
+++ b/HCEB-107/config.json
@@ -6,14 +6,14 @@
 		{
 			"hostname": "HCEB-107-CP1",
 			"uipath": "/blueberry",
-			"preset":"Flatpanel",
+			"preset":"South Display",
 			"features": [
 			]
 		},
 		{
 			"hostname": "HCEB-107-CP2",
 			"uipath": "/blueberry",
-			"preset":"Flatpanel",
+			"preset":"North Display",
 			"features": [
 			]
 		}
