--- a/HCEB-217/config.json
+++ b/HCEB-217/config.json
@@ -23,7 +23,8 @@
 			],
 			"inputs": [
                 "HDMI1",
-                "PC1"
+                "PC1",
+                "VIA1"
 			],
 			"independentAudios": [
 			]
@@ -34,6 +35,10 @@
           "name": "HDMI1",
           "icon": "settings_input_hdmi"
       },
+        {
+            "name": "VIA1",
+            "icon": "settings_input_antenna"
+        },
       {
           "name": "PC1",
           "icon": "desktop_windows"
