--- a/HCEB-419G/config.json
+++ b/HCEB-419G/config.json
@@ -23,6 +23,7 @@
 			],
 			"inputs": [
                 "HDMI1",
+                "VIA1",
                 "PC1"
 			],
 			"independentAudios": [
@@ -34,6 +35,10 @@
           "name": "HDMI1",
           "icon": "settings_input_hdmi"
       },
+        {
+            "name": "VIA1",
+            "icon": "settings_input_antenna"
+        },
       {
           "name": "PC1",
           "icon": "desktop_windows"
