--- a/HCEB-118/config.json
+++ b/HCEB-118/config.json
@@ -4,7 +4,7 @@
 	],
 	"panels": [
 		{
-			"hostname": "HCEB-409-CP1",
+			"hostname": "HCEB-118-CP1",
 			"uipath": "/blueberry",
 			"preset":"Flatpanel",
 			"features": [
@@ -22,6 +22,7 @@
 				"D1"
 			],
 			"inputs": [
+                "PC1",
                 "HDMI1",
                 "VIA1"
 			],
@@ -35,8 +36,12 @@
           "icon": "settings_input_hdmi"
       },
       {
-            "name": "VIA1",
-            "icon": "settings_input_antenna"
+          "name": "PC1",
+          "icon": "computer"
+      },
+      {
+          "name": "VIA1",
+          "icon": "settings_input_antenna"
       }
   ],
   "audioConfiguration": [
