--- a/HCEB-107/config.json
+++ b/HCEB-107/config.json
@@ -4,16 +4,38 @@
 	],
 	"panels": [
 		{
-			"hostname": "HCEB-419G-CP1",
+			"hostname": "HCEB-107-CP1",
 			"uipath": "/blueberry",
-			"preset":"Flatpanel",
+			"preset":"South Display",
+			"features": [
+			]
+		},
+		{
+			"hostname": "HCEB-107-CP2",
+			"uipath": "/blueberry",
+			"preset":"North Display",
 			"features": [
 			]
 		}
 	],
 	"presets": [
 		{
-			"name": "Flatpanel",
+			"name": "North Display",
+			"displays": [
+				"D2"
+			],
+			"icon": "tv",
+			"audioDevices": [
+				"D2"
+			],
+			"inputs": [
+                "HDMI1"
+			],
+			"independentAudios": [
+			]
+		},
+		{
+			"name": "South Display",
 			"displays": [
 				"D1"
 			],
@@ -22,8 +44,6 @@
 				"D1"
 			],
 			"inputs": [
-                "HDMI1",
-                "VIA1",
                 "PC1"
 			],
 			"independentAudios": [
@@ -35,13 +55,9 @@
           "name": "HDMI1",
           "icon": "settings_input_hdmi"
       },
-        {
-            "name": "VIA1",
-            "icon": "settings_input_antenna"
-        },
       {
           "name": "PC1",
-          "icon": "desktop_windows"
+          "icon": "settings_input_hdmi"
       }
   ],
   "audioConfiguration": [
