--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,6 @@ jobs:
 
         steps:
             - checkout
-            - run: |
-                gvt fetch github.com/byuoitav/authmiddleware
             - setup_remote_docker
+            - run: make deps
             - run: make docker
