changing to output configuration

--- a/ITB-1108/config.json
+++ b/ITB-1108/config.json
@@ -222,7 +222,7 @@
 			]
         }
 	],
-    "displayConfiguration": [
+    "outputConfiguration": [
         {
             "name": "D1",
             "icon": "tv"
